fix covid kit z-index

--- a/css/main.css
+++ b/css/main.css
@@ -2800,8 +2800,7 @@ html {
 		text-transform: uppercase;
 		top: 0;
 		width: 100%;
-		z-index: 10000;
-		z-index: 10001;
+		z-index: 199;
 	}
 
 		#header h1 {
